# image_resgister_itk

./: .gitignore  AffineRegistration.cxx  CMakeLists.txt  ImageRegistration1.cxx  ImageRegistration2.cxx  ImageRegistration3.cxx  README.md  Resgitration.sh  Versor3dRegistration.cxx  Versor3dResgistration.cxx  VersorScale3dRegistration.cxx  VersorScale3dResgistration.cxx  run.sh
